--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "analyze:tailwind-css-class-order": "rustywind --dry-run .",
-    "analyze": "npm run analyze:tailwind-css-class-order",
+    "analyze": "yarn analyze:tailwind-css-class-order",
     "fix:tailwind-css-class-order": "rustywind --write .",
-    "fix": "npm run fix:tailwind-css-class-order",
+    "fix": "yarn fix:tailwind-css-class-order",
     "dev": "next",
     "build": "next build",
-    "export": "npm run build && next export",
+    "export": "yarn build && next export",
     "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
