feat: expose data as an API

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/mazipan/buku-saku-pramuka#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
