--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "cors": "^2.8.5",
     "next": "9.5.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-icons": "^3.11.0"
   },
   "devDependencies": {
     "autoprefixer": "9.8.6",
