--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "next build",
     "export": "yarn build && next export",
     "start": "next start",
+    "lint": "eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,7 +34,22 @@
   },
   "devDependencies": {
     "autoprefixer": "9.8.6",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.3",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "prettier": "^2.1.2",
     "rustywind": "0.6.6",
     "tailwindcss": "1.7.2"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": "yarn lint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
