--- a/package.json
+++ b/package.json
@@ -29,11 +29,15 @@
   "dependencies": {
     "cors": "^2.8.5",
     "next": "9.5.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-icons": "^3.11.0"
+    "preact": "^10.5.4",
+    "preact-render-to-string": "^5.1.10",
+    "react": "npm:@preact/compat@^0.0.3",
+    "react-dom": "npm:@preact/compat@^0.0.3",
+    "react-icons": "^3.11.0",
+    "react-ssr-prepass": "npm:preact-ssr-prepass@^1.1.1"
   },
   "devDependencies": {
+    "@prefresh/next": "^1.3.0",
     "autoprefixer": "9.8.6",
     "commitizen": "^4.2.1",
     "cz-conventional-changelog": "3.3.0",
