--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "next": "9.5.3",
+    "globby": "^11.0.1",
     "preact": "^10.5.4",
     "preact-render-to-string": "^5.1.10",
     "react": "npm:@preact/compat@^0.0.3",
