fix(vercel.json): change Cache-Control Header Value
Previously the value of `Cache-Control` is invalid, this commit serve to fix the bug.

fix #40

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
           "headers" : [
             {
               "key" : "Cache-Control",
-              "value" : "public, max-age=0, max-age=86400"
+              "value" : "public, max-age=86400"
             }
           ]
         }
