Adding CORS access header

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
           "headers" : [
             {
               "key" : "Cache-Control",
-              "value" : "public, max-age=86400"
+              "value" : "public, max-age=86400",
+              "Access-Control-Allow-Origin" : "*"
             }
           ]
         }
