--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   },
   "homepage": "https://github.com/mazipan/buku-saku-pramuka#readme",
   "dependencies": {
+    "@n8tb1t/use-scroll-position": "^2.0.3",
     "cors": "^2.8.5",
-    "next": "9.5.3",
     "globby": "^11.0.1",
+    "next": "9.5.3",
     "preact": "^10.5.4",
     "preact-render-to-string": "^5.1.10",
     "react": "npm:@preact/compat@^0.0.3",
