chore: Add CORS access header (#72)
* Adding CORS access header

* Add CORS header

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
             {
               "key" : "Cache-Control",
               "value" : "public, max-age=86400"
+            },
+            {
+               "key" : "Access-Control-Allow-Origin",
+               "value" : "*"
             }
           ]
         }
