--- a/package.json
+++ b/package.json
@@ -29,29 +29,30 @@
   "dependencies": {
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "cors": "^2.8.5",
-    "globby": "^11.0.1",
-    "next": "9.5.4",
-    "preact": "^10.5.4",
-    "preact-render-to-string": "^5.1.10",
-    "react": "npm:@preact/compat@^0.0.3",
-    "react-dom": "npm:@preact/compat@^0.0.3",
-    "react-icons": "^3.11.0",
-    "react-ssr-prepass": "npm:preact-ssr-prepass@^1.1.1"
+    "next": "11.0.1",
+    "preact": "^10.5.14",
+    "preact-render-to-string": "^5.1.19",
+    "react": "npm:@preact/compat@0.0.4",
+    "react-dom": "npm:@preact/compat@0.0.4",
+    "react-icons": "^4.2.0",
+    "react-ssr-prepass": "npm:preact-ssr-prepass@1.2.0"
   },
   "devDependencies": {
-    "@prefresh/next": "^1.3.0",
-    "autoprefixer": "9.8.6",
-    "commitizen": "^4.2.1",
+    "@prefresh/next": "^1.4.6",
+    "autoprefixer": "10.3.1",
+    "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.3",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.4.0",
-    "prettier": "^2.1.2",
-    "rustywind": "0.6.6",
-    "tailwindcss": "1.7.2"
+    "eslint": "^7.31.0",
+    "eslint-config-next": "^11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "globby": "^11.0.4",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.3.2",
+    "rustywind": "0.12.2",
+    "tailwindcss": "2.2.7"
   },
   "lint-staged": {
     "*.{js,ts,vue}": "yarn lint"
