feat(ui): revamp navigation and routes

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/mazipan/buku-saku-pramuka#readme",
   "dependencies": {
+    "@heroicons/react": "^1.0.3",
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "cors": "^2.8.5",
     "next": "11.0.1",
