--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "postbuild": "next-sitemap",
     "export": "yarn build && next export",
     "start": "next start",
-    "lint": "eslint --ignore-path .gitignore \"**/*.+(js|ts|tsx)\" --quiet --fix",
+    "lint": "eslint --ignore-path .gitignore \"**/*.+(js|ts|tsx)\"",
+    "lint:fix": "eslint --ignore-path .gitignore \"**/*.+(js|ts|tsx)\" --quiet --fix",
     "format": "prettier --ignore-path .gitignore \"**/*.+(js|ts|tsx|css|scss|json|md|html)\" --write",
     "prepare": "husky install",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.3",
@@ -61,7 +63,7 @@
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "5.1.0",
