--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "cors": "^2.8.5",
     "next": "11.0.1",
+    "next-seo": "^4.26.0",
     "nprogress": "^0.2.0",
     "preact": "^10.5.14",
     "preact-render-to-string": "^5.1.19",
