feat(font): using inhouse fonts

--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "react": "npm:@preact/compat@0.0.4",
     "react-dom": "npm:@preact/compat@0.0.4",
     "react-icons": "^4.2.0",
-    "react-ssr-prepass": "npm:preact-ssr-prepass@1.2.0",
-    "typeface-inter": "^3.18.1"
+    "react-ssr-prepass": "npm:preact-ssr-prepass@1.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
