--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "cors": "^2.8.5",
     "next": "11.1.0",
-    "next-pwa": "^5.2.25",
+    "next-pwa": "5.2.24",
     "next-seo": "^4.26.0",
     "nprogress": "^0.2.0",
     "preact": "^10.5.14",
