chore: update deps

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,7 +1,19 @@
 node_modules
+
 .rts2_cache_cjs
 .rts2_cache_es
 .rts2_cache_umd
+
+.eslintrc.js
+commitlint.config.js
+next-sitemap.config.js
+next.config.js
+postcss.config.js
+tailwind.config.js
+wb.config.js
+
+src/middleware/init.ts
+
 dist
 public
 .next
