--- a/package.json
+++ b/package.json
@@ -15,68 +15,70 @@
   "main": "index.js",
   "scripts": {
     "analyze:css": "rustywind --dry-run .",
-    "fix:css": "rustywind --write .",
-    "dev": "next",
-    "build": "next build",
+    "build": "NODE_ENV=production next build",
+    "build:export": "NODE_ENV=production pnpm run build && next export",
+    "export": "pnpm run build:export",
     "postbuild": "next-sitemap",
-    "export": "yarn build && next export",
-    "start": "next start",
-    "lint": "eslint --ignore-path .gitignore \"**/*.+(js|ts|tsx)\"",
-    "lint:fix": "eslint --ignore-path .gitignore \"**/*.+(js|ts|tsx)\" --quiet --fix",
+    "dev": "NODE_ENV=development next",
+    "fix:css": "rustywind --write .",
     "format": "prettier --ignore-path .gitignore \"**/*.+(js|ts|tsx|css|scss|json|md|html)\" --write",
-    "prepare": "husky install",
     "postinstall": "husky install",
-    "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable",
+    "lint": "eslint --ignore-path .eslintignore \"**/*.+(js|ts|tsx)\"",
+    "lint:fix": "eslint --ignore-path .eslintignore \"**/*.+(js|ts|tsx)\" --quiet --fix",
+    "prepare": "husky install",
+    "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "cors": "^2.8.5",
-    "next": "12.1.0",
-    "next-pwa": "5.2.24",
-    "next-seo": "^4.26.0",
+    "next": "12.2.2",
+    "next-plugin-preact": "^3.0.7",
+    "next-pwa": "5.5.4",
+    "next-seo": "^5.4.0",
     "nprogress": "^0.2.0",
-    "preact": "^10.5.14",
-    "preact-render-to-string": "^5.1.19",
-    "react": "npm:@preact/compat@0.0.4",
-    "react-dom": "npm:@preact/compat@0.0.4",
-    "react-icons": "^4.2.0",
-    "react-ssr-prepass": "1.4.0"
+    "preact": "^10.10.0",
+    "preact-render-to-string": "^5.2.1",
+    "react": "npm:@preact/compat@17.1.1",
+    "react-dom": "npm:@preact/compat@17.1.1",
+    "react-icons": "^4.4.0",
+    "react-ssr-prepass": "1.5.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
-    "@prefresh/next": "^1.4.6",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@prefresh/next": "^1.5.2",
     "@types/cors": "^2.8.12",
-    "@types/node": "^16.6.1",
+    "@types/node": "^18.0.5",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^17.0.18",
-    "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
-    "autoprefixer": "10.3.1",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "autoprefixer": "10.4.7",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.32.0",
-    "eslint-config-next": "^11.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "^2.24.0",
+    "eslint": "8.20.0",
+    "eslint-config-next": "^12.2.2",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "5.1.0",
-    "eslint-plugin-react": "7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-standard": "5.0.0",
-    "husky": "^7.0.1",
-    "lint-staged": "^11.1.2",
-    "next-sitemap": "^1.6.157",
-    "pinst": "^2.1.6",
-    "prettier": "^2.3.2",
-    "rustywind": "0.12.2",
-    "tailwindcss": "2.2.7",
-    "typescript": "^4.3.5"
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "next-sitemap": "^3.1.11",
+    "prettier": "^2.7.1",
+    "rustywind": "0.15.0",
+    "tailwindcss": "3.1.6",
+    "typescript": "^4.7.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "minimist@<1.2.6": "^1.2.6"
+    }
   }
 }
