chore: redirect to vercel domain

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Pramuka.Space",
+  "name": "Pramuka.Online",
   "short_name": "Pramuka",
   "description": "Kumpulan informasi digital mengenai berbagai materi pramuka, materi kenegaraan dan materi kecakapan umum",
   "start_url": "/?source=pwa",
